[package]
name = "egui_post"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
egui_extras = "0.29.1"
